[gd_scene load_steps=3 format=3 uid="uid://ddm864e3tl8a6"]

[ext_resource type="Script" path="res://scripts/ui/HeroWordPanel.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.15, 0.15, 0.2, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.4, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="HeroWordPanel" type="Panel"]
custom_minimum_size = Vector2(200, 300)
theme_override_styles/panel = SubResource("StyleBoxFlat_1")
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0

[node name="Portrait" type="TextureRect" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
expand_mode = 3
stretch_mode = 5

[node name="NameLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Hero Name"
horizontal_alignment = 1

[node name="HPBar" type="ProgressBar" parent="VBox"]
layout_mode = 2
value = 50.0

[node name="Label" type="Label" parent="VBox/HPBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_font_sizes/font_size = 12
text = "10/10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox"]
layout_mode = 2
text = "Basic Actions"
theme_override_font_sizes/font_size = 12

[node name="BasicActions" type="HBoxContainer" parent="VBox"]
layout_mode = 2
alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBox"]
layout_mode = 2
text = "Class Words"
theme_override_font_sizes/font_size = 12

[node name="ClassWords" type="VBoxContainer" parent="VBox"]
layout_mode = 2

[node name="AssignedWord" type="Panel" parent="VBox"]
layout_mode = 2
visible = false
custom_minimum_size = Vector2(0, 30)

[node name="Label" type="Label" parent="VBox/AssignedWord"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "â†’ ASSIGNED"
horizontal_alignment = 1
vertical_alignment = 1